test_programs/compile_failure/noirc_frontend_tests_enums_missing_many_cases/src/main.nr

        fn main() {
            match Abc::A {
                Abc::A => (),
                Abc::B => (),
            }
        }

        enum Abc {
            A,B,C,D,E,F,G,H,I,J,K,L,M,N,O,P,Q,R,S,T,U,V,W,X,Y,Z
        }
    